syntax = "proto3";

package ai.v1;

message User {
  string user_id = 1;
  string user_name = 2;
  string email = 3;
  string language = 5;
  Plan plan = 6;
}

enum Plan {
  PLAN_UNSPECIFIED = 0;
  PLAN_FREE = 1;
  PLAN_LITE = 2;
  PLAN_PREMIUM = 3;
  PLAN_TEST = 10;
}
